Edited terms of service to become a link and also the button to align

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <input type="email" placeholder="Email Address"><br/>
                   <input type="password" placeholder="Password"><br/>
                   <input type="button" value="CLAIM YOUR FREE TRIAL" class="btn"><br/>
-                  <small>By clicking this button, you are agreeing to our <span class="terms">Terms of Servives.</span>  </small>
+                  <small>By clicking this button, you are agreeing to our <a href="#" class="terms">Terms of Servives.</a>  </small>
                </form>
                   
             </div>
