Modified text with the right indentations

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div id="container">
          <div class="textarticle">
             <h1>Learning to code by watching others </h1>
-            <p>see how experienced developers solve problem in real-time. Watching scripted tutorials is great, but understanding how developers think
-               is invaluble.
+            <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
+                but understanding how developers think is invaluable.
             </p>
          </div>
          <div class="register">
